--- a/IdentityProject/Views/Shared/_CMS.cshtml
+++ b/IdentityProject/Views/Shared/_CMS.cshtml
@@ -20,6 +20,17 @@
                     </ul>
                 </nav>
             </div>
+            @if (User.Identity.IsAuthenticated)
+            {
+                <div class="login">
+                    <p>Welcome @User.Identity.Name</p>
+                    <form asp-controller="Security" asp-action="SignOut" method="post">
+                        <button type="submit" class="delete">Sign Out</button>
+                    </form>
+                </div>
+            }
+
+
         </div>
     </header>
     <main>
